gcc/testsuite/rust/rustc/ui/can-begin-expr-check.rs
pub fn main() {

    return;
    return ();
    return as ();
    return return as ();
    return return return;

    return if true {
        ()
    } else {
        ()
    };

    loop {
        return break as ();
    }

    return enum; // { dg-error "" "" { target *-*-* } }
}

